--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,9 @@
+2011-07-08  Bruno Haible  <bruno@clisp.org>
+
+	* gettext.texi (aclocal): Recommend the use of aclocal's --install
+	option.
+	Suggested by Stefano Lattarini <stefano.lattarini@gmail.com>.
+
 2011-06-03  Bruno Haible  <bruno@clisp.org>
 
 	Copyright: Use LGPL 2.1 instead of LGPL 2.0.
