--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2011-07-12  Bruno Haible  <bruno@clisp.org>
+
+	Update after gnulib changed.
+	* autogen.sh (GNULIB_MODULES_TOOLS_FOR_SRC_COMMON_DEPENDENCIES): Update
+	module names.
+
 2011-06-08  Bruno Haible  <bruno@clisp.org>
 
 	Fix a link error due to rpl_wcrtomb on Solaris 9.
