--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,3 +1,8 @@
+2011-07-12  Bruno Haible  <bruno@clisp.org>
+
+	Update after gnulib changed.
+	* modules/fnmatch.diff: Update.
+
 2011-06-16  Bruno Haible  <bruno@clisp.org>
 
 	Update after gnulib changed.
