--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,3 +1,8 @@
+2011-08-04  Bruno Haible  <bruno@clisp.org>
+
+	Update after gnulib changed.
+	* lib/xgetcwd.c (PATH_MAX): Provide a fallback value.
+
 2011-07-12  Bruno Haible  <bruno@clisp.org>
 
 	Update after gnulib changed.
