Update from gnulib: fix "make -q" problem.

--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,3 +1,13 @@
+2011-08-11  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Makefile.in.in: fix make -q problem
+	* build-aux/po/Makefile.in.in (check-macro-version): Remove this
+	rule, since there's no file named 'check-macro-version' and its
+	use as a file breaks make -q.
+	(all): Don't depend on check-macro-version.
+	(CHECK_MACRO_VERSION): New macro.
+	(stamp-po): Use it.
+
 2011-01-18  Bruno Haible  <bruno@clisp.org>
 
 	* da.po: Update from Keld Simonsen <keld@keldix.com>.
