--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,12 @@
+2011-10-03  Bruno Haible  <bruno@clisp.org>
+
+	* relocatable.c (ENABLE_COSTLY_RELOCATABLE): New macro.
+	(compute_curr_prefix, shared_library_fullname,
+	find_shared_library_fullname, get_shared_library_fullname, relocate):
+	Use it together with PIC && INSTALLDIR.
+	Reported by <jojelino@gmail.com>
+	via Charles Wilson <cygwin@cwilson.fastmail.fm>.
+
 2011-07-07  Bruno Haible  <bruno@clisp.org>
 
 	Complete the change in vasnprintf.c from 2010-04-10.
