--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,7 +1,7 @@
 2011-09-12  Bruno Haible  <bruno@clisp.org>
 
 	Update after gnulib changed.
-	* gnulib-local/modules/backupfile (Depends-on): Add opendir, readdir,
+	* modules/backupfile (Depends-on): Add opendir, readdir,
 	closedir.
 
 2011-08-12  Bruno Haible  <bruno@clisp.org>
