--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,3 +1,9 @@
+2011-10-18  Daniel Richard G.  <skunk@iskunk.org>  (tiny change)
+
+	Support for old NeXTstep 3.3 gcc.
+	* lib/gettext.h (_LIBGETTEXT_HAVE_VARIABLE_SIZE_ARRAYS): Write
+	'defined __STRICT_ANSI__', not '__STRICT_ANSI__'.
+
 2011-09-12  Bruno Haible  <bruno@clisp.org>
 
 	Update after gnulib changed.
