--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,3 +1,8 @@
+2012-01-04  Bruno Haible  <bruno@clisp.org>
+
+	Talk about "native Windows API", not "Win32".
+	* vasnprintf.c: Update comments to mention native Windows.
+
 2011-10-15  Bruno Haible  <bruno@clisp.org>
 
 	vasnprintf: Optimize bit search operation.
