--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,10 @@
+2012-01-06  Bruno Haible  <bruno@clisp.org>
+
+	Talk about "native Windows API", not "Woe32".
+	* localcharset.c: Update comments to mention native Windows.
+	* relocatable.c: Likewise.
+	* config.charset: More comments.
+
 2012-01-04  Bruno Haible  <bruno@clisp.org>
 
 	Talk about "native Windows API", not "Win32".
