--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,11 @@
+2012-01-06  Paul Eggert  <eggert@cs.ucla.edu>
+
+	Use ', not `, for quoting output.
+	* m4/intl.m4 (gt_CHECK_DECL): Quote 'like this', not `like this', as
+	per the recent change to the GNU coding standards.
+	* m4/longlong.m4 (AC_TYPE_LONG_LONG_INT,
+	AC_TYPE_UNSIGNED_LONG_LONG_INT): Likewise.
+
 2011-09-10  Bruno Haible  <bruno@clisp.org>
 
 	iconv.m4: Add support for MSVC compiler.
