--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,11 @@
+2012-01-26  Bruno Haible  <bruno@clisp.org>
+
+	Modernize quoting.
+	* Makefile.in: Quote 'like this', not `like this', as per the recent
+	change to the GNU coding standards.
+	* libgnuintl.in.h: Likewise.
+	* vasnprintf.h: Likewise.
+
 2012-01-06  Paul Eggert  <eggert@cs.ucla.edu>
 
 	doc: C11 and C++11 are now official
