--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,3 +1,12 @@
+2012-01-26  Bruno Haible  <bruno@clisp.org>
+
+	Modernize quoting.
+	* autosprintf.in.h: Quote 'like this', not `like this', as per the
+	recent change to the GNU coding standards.
+	* vasnprintf.h: Likewise.
+	* vasprintf.h: Likewise.
+	* INSTALL: Process through sed -e "s/\`\([^']*\)'/‘\1’/g"
+
 2012-01-04  Bruno Haible  <bruno@clisp.org>
 
 	Talk about "native Windows API", not "Win32".
