--- a/gettext-tools/doc/ChangeLog
+++ b/gettext-tools/doc/ChangeLog
@@ -1,3 +1,13 @@
+2012-01-26  Bruno Haible  <bruno@clisp.org>
+
+	Modernize quoting.
+	* FAQ.html: Quote 'like this', not `like this', as per the recent
+	change to the GNU coding standards.
+	* ISO_3166: Likewise.
+	* ISO_3166_de: Likewise.
+	* tutorial.html: Process through
+	sed -e "s/\`\`\([^']*\)''/“\1”/g" | sed -e "s/\`\([^']*\)'/‘\1’/g"
+
 2011-07-08  Bruno Haible  <bruno@clisp.org>
 
 	* gettext.texi (aclocal): Recommend the use of aclocal's --install
