--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,10 @@
+2012-01-26  Bruno Haible  <bruno@clisp.org>
+
+	Modernize quoting.
+	* tstgettext.c (usage): Quote 'like this', not `like this', as per the
+	recent change to the GNU coding standards.
+	* tstngettext.c (usage): Likewise.
+
 2012-01-15  Bruno Haible  <bruno@clisp.org>
 
 	Avoid test failure on Solaris 11.
