--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,3 +1,12 @@
+2012-01-26  Bruno Haible  <bruno@clisp.org>
+
+	Modernize quoting.
+	* lib/backupfile.c: Quote 'like this', not `like this', as per the
+	recent change to the GNU coding standards.
+	* lib/basename.c: Likewise.
+	* lib/closeout.c: Likewise.
+	* lib/xmalloc.c: Likewise.
+
 2012-01-06  Bruno Haible  <bruno@clisp.org>
 
 	Update after gnulib changed.
