--- a/gettext-tools/libgettextpo/ChangeLog
+++ b/gettext-tools/libgettextpo/ChangeLog
@@ -1,3 +1,7 @@
+2013-04-11  Ľubomír Remák  <lubomirr@lubomirr.eu>
+
+	* Makefile.am (libgettextpo_la_AUXSOURCES): Add format-lua.c.
+
 2012-12-25  Daiki Ueno  <ueno@gnu.org>
 
 	* gettext-0.18.2 released.
