--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2012-02-18  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (distcheck-hook): Update after gnulib changed.
+
 2012-01-26  Bruno Haible  <bruno@clisp.org>
 
 	Modernize quoting.
