--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,11 @@
+2012-01-04  Bruno Haible  <bruno@clisp.org>
+
+	Talk about "native Windows API", not "Win32".
+	* threadlib.m4: Update comments to mention native Windows.
+	(gl_THREADLIB_EARLY_BODY, gl_THREADLIB_BODY): Expect
+	--enable-threads=windows instead of --enable-threads=win32. Set
+	USE_WINDOWS_THREADS, not USE_WIN32_THREADS.
+
 2012-01-06  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* m4/gettext.m4: In commentary, do not use ` to quote.
