--- a/gettext-runtime/tests/ChangeLog
+++ b/gettext-runtime/tests/ChangeLog
@@ -1,3 +1,9 @@
+2012-01-06  Bruno Haible  <bruno@clisp.org>
+
+	Talk about "native Windows API", not "Woe32".
+	* test-lock.c (USE_WINDOWS_THREADS): Renamed from USE_WIN32_THREADS.
+	(TEST_WINDOWS_THREADS): Renamed from TEST_WIN32_THREADS.
+
 2011-06-03  Bruno Haible  <bruno@clisp.org>
 
 	Copyright: Use LGPL 2.1 instead of LGPL 2.0.
