--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,3 +1,9 @@
+2012-01-06  Paul Eggert  <eggert@cs.ucla.edu>
+
+	doc: C11 and C++11 are now official
+	* verify.h: Replace references to draft C1X to C11, and to draft C++0X
+	to C++11.
+
 2012-01-06  Bruno Haible  <bruno@clisp.org>
 
 	Talk about "native Windows API", not "Woe32".
