--- a/gettext-runtime/libasprintf/ChangeLog
+++ b/gettext-runtime/libasprintf/ChangeLog
@@ -1,3 +1,7 @@
+2012-02-05  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* vasnprintf.c: Spelling fixes.
+
 2012-01-26  Bruno Haible  <bruno@clisp.org>
 
 	Modernize quoting.
