--- a/gettext-runtime/tests/ChangeLog
+++ b/gettext-runtime/tests/ChangeLog
@@ -1,3 +1,7 @@
+2012-02-05  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* test-lock.c: Spelling fixes.
+
 2012-01-06  Bruno Haible  <bruno@clisp.org>
 
 	Talk about "native Windows API", not "Woe32".
