--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,10 @@
+2011-09-11  Bruno Haible  <bruno@clisp.org>
+
+	Don't assume <unistd.h> exists.
+	* fcntl-o.m4 (gl_FCNTL_O_FLAGS): If <unistd.h> does not exist,
+	include <io.h> and <stdlib.h> instead. Don't test symbolink links if
+	symlink() does not exist.
+
 2012-01-04  Bruno Haible  <bruno@clisp.org>
 
 	Talk about "native Windows API", not "Win32".
