--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,7 @@
+2012-02-18  Bruno Haible  <bruno@clisp.org>
+
+	* Makefile.am (EXTRA_DIST): Remove intmax_t.m4.
+
 2012-02-05  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* po.m4: Spelling fixes.
