--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-04-29  Bruno Haible  <bruno@clisp.org>
+
+	Allow use of autoconf-2.69 and automake-1.12.
+	* autogen.sh: Update comments.
+
 2012-02-18  Bruno Haible  <bruno@clisp.org>
 
 	Improve ensurance that intmax_t gets defined in libasprintf.
