--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,10 @@
+2012-05-03  Bruno Haible  <bruno@clisp.org>
+
+	Document msgfmt option --endianness.
+	* msgfmt.c (usage): Document the option --endianness.
+	Reported by Paul Martin <pm@debian.org> via
+	Santiago Vila <sanvila@unex.es>.
+
 2012-01-26  Bruno Haible  <bruno@clisp.org>
 
 	Modernize quoting.
