--- a/NEWS
+++ b/NEWS
@@ -785,7 +785,7 @@ Version 0.10.35 - April 1998, by Ulrich Drepper
   '--with-included-gettext'
 
 * gettextize now can determine whether the aclocal.m4 of the project
-  is sufficent
+  is sufficient
 
 * use automake for Makefile.in generation
 
@@ -831,7 +831,7 @@ Version 0.10 - December 1995, by Ulrich Drepper
 
 * msgcmp program to find matches in two .po files
 
-* programs now have exit status != 0 if errors occured
+* programs now have exit status != 0 if errors occurred
 
 * libintl.a is now selfcontained and can be used without context in
   other projects (even on systems missing alloca)
