--- a/gettext-tools/src/ChangeLog
+++ b/gettext-tools/src/ChangeLog
@@ -1,3 +1,8 @@
+2012-06-03  Jim Meyering  <jim@meyering.net>
+
+	* msginit.c: Spelling fixes.
+	* write-catalog.c: Likewise.
+
 2012-05-03  Bruno Haible  <bruno@clisp.org>
 
 	Document msgfmt option --endianness.
