--- a/gettext-tools/tests/ChangeLog
+++ b/gettext-tools/tests/ChangeLog
@@ -1,3 +1,7 @@
+2012-06-03  Jim Meyering  <jim@meyering.net>
+
+	* msgcomm-17: Spelling fixes.
+
 2012-02-19  Bruno Haible  <bruno@clisp.org>
 
 	Avoid spurious test output with guile 2.0.x.
