New Croatian translations.

--- a/gettext-tools/examples/ChangeLog
+++ b/gettext-tools/examples/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-08  Bruno Haible  <bruno@clisp.org>
+
+	* po/hr.po: New file, from Tomislav Krznar <tomislav.krznar@gmail.com>.
+
 2011-01-18  Bruno Haible  <bruno@clisp.org>
 
 	* po/da.po: New file, from Keld Simonsen <keld@keldix.com>.
