--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,3 +1,7 @@
+2012-07-08  Bruno Haible  <bruno@clisp.org>
+
+	* hr.po: New file, from Tomislav Krznar <tomislav.krznar@gmail.com>.
+
 2012-02-19  Bruno Haible  <bruno@clisp.org>
 
 	Rules.quot: Reenable use of build gettext tools in gettext package.
