--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-08  Daiki Ueno  <ueno@unixuser.org>
+
+	* NEWS: Mention that autoconf 2.60 is required.
+	Suggested by Bruno Haible <bruno@clisp.org>.
+
 2012-04-29  Bruno Haible  <bruno@clisp.org>
 
 	Allow use of autoconf-2.69 and automake-1.12.
