--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2012-12-08  Daiki Ueno  <ueno@unixuser.org>
 
+	* autogen.sh: Ignore libunistring tests which are known to fail.
+	(GNULIB_MODULES_TOOLS_LIBUNISTRING_TESTS): New variable.
+
+2012-12-08  Daiki Ueno  <ueno@unixuser.org>
+
 	* NEWS: Mention that autoconf 2.60 is required.
 	Suggested by Bruno Haible <bruno@clisp.org>.
 
