--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,3 +1,13 @@
+2012-12-07  Bruno Haible  <bruno@clisp.org>
+
+	* cs.po: Update from Marek Černocký <marek@manet.cz>.
+	* gl.po: Update from Leandro Regueiro <leandro.regueiro@gmail.com>.
+	* hr.po: Update from Tomislav Krznar <tomislav.krznar@gmail.com>.
+	* sr.po: Update from Мирослав Николић <miroslavnikolic@rocketmail.com>.
+	* uk.po: Update from Yuri Chornoivan <yurchor@ukr.net>.
+	* vi.po: Update from Trần Ngọc Quân <vnwildman@gmail.com>.
+	* LINGUAS: Add hr.
+
 2012-07-08  Bruno Haible  <bruno@clisp.org>
 
 	* hr.po: New file, from Tomislav Krznar <tomislav.krznar@gmail.com>.
