--- a/gettext-tools/examples/ChangeLog
+++ b/gettext-tools/examples/ChangeLog
@@ -1,3 +1,12 @@
+2012-12-07  Bruno Haible  <bruno@clisp.org>
+
+	* po/cs.po: New file, from Marek Černocký <marek@manet.cz>.
+	* po/nb.po: New file, from Johnny A. Solbu <johnny@solbu.net>.
+	* po/vi.po: Update from Trần Ngọc Quân <vnwildman@gmail.com>.
+	* po/LINGUAS: Add cs, hr, nb.
+	* hello-*/po/LINGUAS: Update.
+	* Makefile.am (EXAMPLESPOFILES): Add the new message catalogs.
+
 2012-07-08  Bruno Haible  <bruno@clisp.org>
 
 	* po/hr.po: New file, from Tomislav Krznar <tomislav.krznar@gmail.com>.
