--- a/gettext-tools/po/ChangeLog
+++ b/gettext-tools/po/ChangeLog
@@ -1,3 +1,14 @@
+2012-12-07  Bruno Haible  <bruno@clisp.org>
+
+	* de.po: Update from Karl Eichwalder <ke@suse.de>.
+	* gl.po: Update from Leandro Regueiro <leandro.regueiro@gmail.com>.
+	* ja.po: Update from Masahito Yamaga <ma@yama-ga.com>.
+	* pa.po: New file, from A S Alam <aalam@users.sf.net>.
+	* sk.po: Update from Marcel Telka <marcel@telka.sk>.
+	* uk.po: Update from Yuri Chornoivan <yurchor@ukr.net>.
+	* vi.po: Update from Trần Ngọc Quân <vnwildman@gmail.com>.
+	* LINGUAS: Add pa.
+
 2012-02-19  Bruno Haible  <bruno@clisp.org>
 
 	Rules.quot: Reenable use of build gettext tools in gettext package.
