--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -7,6 +7,20 @@
 	Accordingly, bump requirement in AC_PREREQ to 2.60.
 	* po.m4 (AM_PO_SUBDIRS): Likewise.
 
+2012-11-29  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* lock.m4 (gl_PREREQ_LOCK): Do not require AC_C_INLINE.
+
+2012-09-22  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* xsize.m4 (gl_XSIZE): Do not require AC_C_INLINE.
+
+2012-09-10  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* fcntl-o.m4 (gl_FCNTL_O_FLAGS): Check for AIX 7.1 bug
+	that caused a GNU tar test failure.  Problem reported by Jez Wain; see
+	<http://lists.gnu.org/archive/html/bug-tar/2012-07/msg00018.html>.
+
 2012-06-22  Bruno Haible  <bruno@clisp.org>
 
 	* gettext.m4: Write "Mac OS X" instead of "MacOS X".
