--- a/gettext-runtime/doc/ChangeLog
+++ b/gettext-runtime/doc/ChangeLog
@@ -1,3 +1,8 @@
+2012-12-08  Daiki Ueno  <ueno@unixuser.org>
+
+	* matrix.texi: Update.
+	* nls.texi (STATUS): Likewise.
+
 2011-06-03  Bruno Haible  <bruno@clisp.org>
 
 	Copyright: Use LGPL 2.1 instead of LGPL 2.0.
