--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-Version 0.18.2 - October 2011
+Version 0.18.2 - December 2012
 
 * xgettext now understands the block comment syntax of Guile 2.0.
 
@@ -14,11 +14,14 @@ Version 0.18.2 - October 2011
   dependencies against installed package size. --with-xz has the highest
   compression rate, followed by --with-git, followed by --with-bzip2.
 
-* The autoconf macros installed by 'gettextize' now require Autoconf
-  version 2.60 or newer.
+* Autoconf macros:
+  - The autoconf macros installed by 'gettextize' now work with the
+    forthcoming Automake 1.14 and require Autoconf version 2.60 or
+    newer.
 
 * Portability:
-  - Building on MacOS X 10.7 is now supported.
+  - Building on MacOS X 10.7, Cygwin 1.7.10, and newer 64-bit mingw is
+    now supported.
 
 Version 0.18.1 - June 2010
 
