--- a/gettext-runtime/intl/ChangeLog
+++ b/gettext-runtime/intl/ChangeLog
@@ -1,5 +1,10 @@
 2012-12-25  Daiki Ueno  <ueno@gnu.org>
 
+	* libgnuintl.in.h (LIBINTL_VERSION): Bump to 0.18.2.
+	* Makefile.in (LTV_CURRENT, LTV_REVISION, LTV_AGE): Bump to 9:2:1.
+
+2012-12-25  Daiki Ueno  <ueno@gnu.org>
+
 	* intl-exports.c (IMP): Check __MINGW32__ as well as _WIN64.
 
 2012-12-20  Daiki Ueno  <ueno@gnu.org>
