--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2012-12-25  Daiki Ueno  <ueno@gnu.org>
 
+	* gettext-0.18.2 released.
+
+2012-12-25  Daiki Ueno  <ueno@gnu.org>
+
 	* version.sh: Bump to 0.18.2.
 	* autogen.sh: Record the gnulib version that is being used.
 	* NEWS: Update the release date of 0.18.2.  Reformat "Autoconf
