--- a/gettext-runtime/ChangeLog
+++ b/gettext-runtime/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-25  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext-0.18.2 released.
+
 2012-12-17  Daiki Ueno  <ueno@unixuser.org>
 
 	* configure.ac: Use AC_CONFIG_HEADERS instead of AM_CONFIG_HEADER.
