--- a/gettext-runtime/m4/ChangeLog
+++ b/gettext-runtime/m4/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-25  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext-0.18.2 released.
+
 2012-12-07  Stefano Lattarini  <stefano.lattarini@gmailcom>  (tiny change)
 
 	m4: use AC_PROG_MKDIR_P, not the deprecated AM_PROG_MKDIR_P
