--- a/gettext-runtime/po/ChangeLog
+++ b/gettext-runtime/po/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-25  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext-0.18.2 released.
+
 2012-12-07  Bruno Haible  <bruno@clisp.org>
 
 	* cs.po: Update from Marek Černocký <marek@manet.cz>.
