--- a/gettext-runtime/tests/ChangeLog
+++ b/gettext-runtime/tests/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-25  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext-0.18.2 released.
+
 2012-12-17  Daiki Ueno  <ueno@unixuser.org>
 
 	test-lock: work around pthread-win32
