--- a/gettext-tools/examples/ChangeLog
+++ b/gettext-tools/examples/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-25  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext-0.18.2 released.
+
 2012-12-19  Daiki Ueno  <ueno@gnu.org>
 
 	Fix build error in hello-c++-kde due to autom4te cache.
