--- a/gettext-tools/libgettextpo/ChangeLog
+++ b/gettext-tools/libgettextpo/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-25  Daiki Ueno  <ueno@gnu.org>
+
+	* gettext-0.18.2 released.
+
 2012-12-08  Daiki Ueno  <ueno@unixuser.org>
 
 	* gettext-po.in.h (LIBGETTEXTPO_VERSION): Bump to 0.18.2.
