--- a/gnulib-local/ChangeLog
+++ b/gnulib-local/ChangeLog
@@ -1,3 +1,12 @@
+2012-12-12  Daiki Ueno  <ueno@unixuser.org>
+
+	Add notice about included external libraries.
+	As per "External Libraries" in the (maintain) manual.
+	* lib/glib/README: New file.
+	* lib/libcroco/README: New file.
+	* lib/libxml/README: New file.
+	* Makefile.am (EXTRA_DIST): Add them.
+
 2012-07-11  Paul Eggert  <eggert@cs.ucla.edu>
 
 	Do not assume '#define ... defined ...' behavior.
